<resources>
    <string name="alarm_text">alarm</string>
    <string name="timer_text">timer</string>
    <string name="standby_text">standby</string>
    <string name="off" translatable="false">OFF</string>
    <string name="on" translatable="false">ON</string>
    <string name="text_open_in_spotify">Open in Spotify</string>
    <string name="notification_channel_alarm">Alarms</string>
    <string name="notification_channel_alarm_snooze">Snooze</string>
    <string name="notification_channel_alarm_reschedule">Rescheduled alarms</string>
    <string name="notification_channel_alarm_error">Emergency alarm</string>
    <string name="notification_channel_timer">Timers</string>
    <string name="notification_channel_standby">Standby</string>
    <string name="rescheduling_alarms_after_reboot">Alarms have been rescheduled after phone reboot</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="notification_disabled">Notifications disabled</string>
    <string name="notification_disabled_message">It seems that Revery notifications are disabled. In order for alarms to go off properly, notifications have to be enabled.</string>
    <string name="emergency_alarm">Emergency alarm</string>
    <string name="notification_spotify_error_authentication_failed">Emergency alarm went off because Spotify authentication failed.</string>
    <string name="notification_spotify_error_offline">Emergency alarm went off because your device seems offline.</string>
    <string name="notification_spotify_error_not_installed">Emergency alarm went off because Spotify is not installed on your device.</string>
    <string name="notification_spotify_error_player_user_not_authorized">Emergency alarm went off because it seems you haven\'t authorize Revery to play Spotify content.</string>
    <string name="notification_spotify_error_not_logged_in">Emergency alarm went off because you are not logged in Spotify app.</string>
    <string name="notification_spotify_error_unsupported_feature_version">Emergency alarm went off because of an unsupported feature.</string>
    <string name="notification_spotify_error_remote_service">Emergency alarm went off because Revery failed communicating with Spotify app.</string>
    <string name="notification_spotify_error_disconnected">Emergency alarm went off because Revery got disconnected from Spotify.</string>
    <string name="notification_spotify_error_remote_client">Emergency alarm went off because Revery failed communicating with Spotify player.</string>
    <string name="notification_spotify_error_unknown">Emergency alarm went off because of an unknown reason.</string>
    <string name="notification_player_error_general">Emergency alarm went off because of an unknown reason.</string>
    <string name="notification_timer_player_error_general">An error occurred while trying to connect to Spotify.</string>
    <string name="notification_standby_player_error_general">An error occurred while trying to connect to Spotify.</string>
    <string name="spotify_not_installed">Spotify not found</string>
    <string name="spotify_not_installed_message">It seems that Spotify is not installed on your device. In order to play Spotify\'s content you need to install Spotify.</string>
    <string name="spotify_install">Install Spotify</string>
    <string name="ringtone_picker_default_title">Select ringtone</string>
    <string name="title_default_list_item">Default</string>
    <string name="title_silent_list_item">Silent</string>
    <string name="select">Select</string>
    <string name="close">Dismiss</string>
    <string name="android_settings">Android settings</string>
    <string name="android_settings_configure">Configure</string>
    <string name="android_settings_battery_optimization_message">Starting from Android 6.0, Android introduces Doze. Doze reduces battery consumption by deferring background application activity when the device is unused for a long period of time.\nTo make sure %1$s functions properly, it requires to be configured :</string>
    <string name="android_settings_battery_optimization_requirement">Settings > Battery > Battery Optimization > Don\'t optimize for %1$s</string>
    <string name="android_settings_auto_start_requirement">Enable Auto Start for %1$s</string>
    <string name="android_settings_auto_start_requirement_error">(the status might be unknown)</string>
    <string name="android_settings_reshow_dialog">You will be able to reshow this dialog from %1$s settings if necessary.</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="monday_long">monday</string>
    <string name="tuesday_long">tuesday</string>
    <string name="wednesday_long">wednesday</string>
    <string name="thursday_long">thursday</string>
    <string name="friday_long">friday</string>
    <string name="saturday_long">saturday</string>
    <string name="sunday_long">sunday</string>
    <string name="monday_short">M</string>
    <string name="tuesday_short">T</string>
    <string name="wednesday_short">W</string>
    <string name="thursday_short">T</string>
    <string name="friday_short">F</string>
    <string name="saturday_short">S</string>
    <string name="sunday_short">S</string>
    <string name="am" translatable="false">AM</string>
    <string name="pm" translatable="false">PM</string>
    <string name="about">About</string>
    <string name="alarm_test">Alarm preview</string>
    <string name="about_ok">That\'s great</string>
    <string name="about_developed_by">Developed by Pierre Ghazal</string>
    <string name="about_copyright">© 2020 Revery, all rights reserved</string>
    <string name="about_email">Support: pghaz.apps@gmail.com</string>
    <string name="about_version">Version</string>
    <string name="alarm_settings">Alarms</string>
    <string name="audio">Audio</string>
    <string name="alarm_snooze_duration_static">Snooze duration</string>
    <string name="alarm_fade_in_duration_static">Fade in duration</string>
    <string name="alarm_should_use_device_volume">Use device\'s volume</string>
    <string name="alarm_should_use_device_volume_explanation"><b>WARNING:</b> if <b>enabled</b> and if you choose a default ringtone or one of your own sounds for your alarm, the application will use the <b>alarm stream</b> volume. Otherwise, the application will use the <b>music stream</b> volume (e.g: when alarm plays a content Spotify). If <b>disabled</b>, the app will use the volume level below.</string>
    <string name="alarm_audio_by_default">Alarms default audio</string>
    <string name="timer_audio_by_default">Timers ringtone</string>
    <string name="alarm_snooze_update">Ability to change duration when alarm goes off</string>
    <string name="alarm_snooze_double_tap">Double tap to snooze</string>
    <string name="alarm_slide_to_turn_off">Slide to turn off alarm</string>
    <string name="spotify_login">Login</string>
    <string name="spotify_logout">Logout</string>
    <string name="permissions">Storage access</string>
    <string name="permissions_message">In order to select a file from your device, you need to give storage permission to the application.</string>
    <string name="menu_disable_all_alarms">Turn all alarms off</string>
    <string name="menu_disable_all_timers">Stop all timers</string>
    <string name="menu_settings">Settings</string>
    <string name="no_alarms_scheduled">No alarms created yet</string>
    <string name="recurring">recurring</string>
    <string name="create_alarm">add alarm</string>
    <string name="edit_alarm">edit alarm</string>
    <string name="vibrate">vibrate</string>
    <string name="fade_in">fade in</string>
    <string name="fade_out">fade out</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="alarm_hint">add a description</string>
    <string name="text_colon">:</string>
    <string name="alarm_description_static">description</string>
    <string name="alarm_repeat_static">repeat alarm</string>
    <string name="alarm_remaining_time_static">fires in</string>
    <string name="alarm_turn_off">turn off</string>
    <string name="alarm_snooze">snooze</string>
    <string name="spotify">Spotify</string>
    <string name="by_default">Default</string>
    <string name="select_music_from_device">My sounds</string>
    <string name="select_ringtone_from_device">Ringtone</string>
    <string name="everyday">everyday</string>
    <string name="weekend">weekend</string>
    <string name="week">week</string>
    <string name="alarm_of">Alarm:</string>
    <string name="alarm_less_than_one_minute">less than a minute</string>
    <string name="alarm_snooze_of">Snooze:</string>
    <string name="alarm_disable_snooze">Turn off</string>
    <string name="more_options">more options</string>
    <string name="alarm_shuffle">shuffle play</string>
    <string name="alarm_repeat">repeat</string>
    <string name="alarm_keep_playing">keep playing after alarm turns off</string>
    <string name="track">Track</string>
    <string name="album">Album</string>
    <string name="playlist">Playlist</string>
    <string name="podcast">Podcast</string>
    <string name="artist">Artist</string>
    <string name="search">Search</string>
    <string name="search_in_spotify">Search in Spotify</string>
    <string name="my_playlists">My playlists</string>
    <string name="my_saved_albums">Liked albums</string>
    <string name="my_saved_tracks">Liked tracks</string>
    <string name="my_top_artists">My top artists</string>
    <string name="my_top_tracks">My top tracks</string>
    <string name="recently_played">Recently played</string>
    <string name="error_network">Network error occurred: check your connectivity and try again</string>
    <string name="error_unexpected">Unexpected error occurred</string>
    <string name="next">Next</string>
    <string name="lets_go">Let\'s go</string>
    <string name="on_boarding_intro_title">Welcome in %1$s</string>
    <string name="on_boarding_intro_description">The app that wakes you up to the sounds of your favorite artists and playlists</string>
    <string name="on_boarding_settings_turn_off">Configure how you turn off your alarms</string>
    <string name="on_boarding_settings_snooze">You\'d like to sleep more ?</string>
    <string name="on_boarding_settings_description">Find all the features in the settings.</string>
    <string name="on_boarding_spotify_title">Wake up to your favorite songs with Spotify</string>
    <string name="on_boarding_spotify_logged_as">You are logged in as :</string>
    <string name="on_boarding_spotify_change_user">change user</string>
    <string name="on_boarding_spotify_not_installed">Spotify does not seem to be installed</string>
    <string name="on_boarding_spotify_description_logged">You can log out and change user at any time from the settings.</string>
    <string name="on_boarding_android_title">Before continuing, you still have a few adjustments to make !</string>
    <string name="on_boarding_android_do_not_disturb">Are you used to enable <b>Do Not Disturb</b> ?\nAllow Revery to access the feature</string>
    <string name="on_boarding_android_access_do_not_disturb">«Do Not Disturb» Access</string>
    <string name="on_boarding_android_one_last_thing">One last thing !</string>
    <string name="on_boarding_android_description">You can make these adjustments from the settings.</string>
    <string name="on_boarding_spotify_description_not_logged">You can log in at any time from the settings.</string>
    <string name="on_boarding_android_authorize_do_not_disturb_success">Authorized successfully</string>
    <string name="on_boarding_android_authorize_do_not_disturb_failed">Authorization failed</string>
    <string name="do_not_disturb_cannot_handle">Oops, your device doesn\'t allow this action</string>
</resources>