<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/half_base_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/third_base_margin"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/notification_disabled"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:fontFamily="@font/montserrat_semi_bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/half_base_margin"
        android:text="@string/notification_disabled_message"
        android:textColor="@android:color/black" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/goToSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:paddingStart="@dimen/half_base_margin"
        android:paddingEnd="@dimen/half_base_margin"
        android:text="@string/go_to_settings"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

</LinearLayout>